--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.5.3
  - Added Movie logo view. Get adding at fanart.tv
+ - Added CD/DVD art. Expects cdart.png in album dir and disc.png in movie dir.
  - Fixed Playlist video item changing show GUI.
 
 0.5.2
