--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.5.4
+ - Fixed Season order 10+.
+ 
+
 0.5.3
  - Added Movie logo view. Get adding at fanart.tv
  - Added CD/DVD art. Expects cdart.png in album dir and disc.png in movie dir.
