--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.6.0
+ - Initial build for Frodo.
+ - Websockets - near instant responce to notifications.
+
 0.5.3
  - Added Movie logo view. Get adding at fanart.tv
  - Added CD/DVD art. Expects cdart.png in album dir and disc.png in movie dir.
