--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
 0.6.0
  - Initial build for Frodo.
  - Websockets - near instant responce to notifications.
+ - Limiting on library items.
+ - Info and context buttons.
+ - All available controls in large overlay.
+ - Popup when entering text is required.
+ - Advanced search.
+ - Video genres.
 
 0.5.4
  - Added Music Videos page.
