--- a/po/en.po
+++ b/po/en.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: AWXi\n"
 "POT-Creation-Date: 2012-11-07 11:27-0000\n"
 "PO-Revision-Date: 2012-11-07 12:29-0000\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"Last-Translator: mizaki\n"
+"Language-Team: AWXi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -100,8 +100,10 @@ msgid "Advanced Search"
 msgstr ""
 
 msgctxt "Page"
-msgid "Results"
-msgstr ""
+msgid "Result"
+msgid_plural "Results"
+msgstr[0] ""
+msgstr[1] ""
 
 msgctxt "Page and menu"
 msgid "Title"
@@ -131,11 +133,11 @@ msgctxt "Tool tip"
 msgid "Swap Playlist Item..."
 msgstr ""
 
-msgctxt "Popup message"
+msgctxt "Popup message addition"
 msgid "OK"
 msgstr ""
 
-msgctxt "Popup message"
+msgctxt "Popup message addition"
 msgid "Failed!"
 msgstr ""
 
@@ -148,11 +150,11 @@ msgid "Failed to send command!"
 msgstr ""
 
 msgctxt "Popup message"
-msgid "Failed to set Volume!"
+msgid "Failed to set volume!"
 msgstr ""
 
 msgctxt "Popup message"
-msgid "Failed to get Directory!"
+msgid "Failed to get directory!"
 msgstr ""
 
 msgctxt "Popup message"
@@ -160,7 +162,7 @@ msgid "Failed to get File Sources!"
 msgstr ""
 
 msgctxt "Popup message"
-msgid "Failed to get genre!"
+msgid "Failed to get genres!"
 msgstr ""
 
 msgctxt "Popup message"
@@ -174,22 +176,22 @@ msgstr ""
 msgid "XBMC has quit. You can close this window."
 msgstr ""
 
-msgctxt "Popup message"
+msgctxt "Popup message with addition"
 msgid "Playing... "
 msgstr ""
 
-msgctxt "Popup message"
+msgctxt "Popup message with addition"
 msgid "Adding to playlist..."
 msgstr ""
 
 msgid "Not supported"
 msgstr "This is currently not supported by the XBMC-API."
 
-msgctxt "Popup message"
+msgctxt "Popup message with addition"
 msgid "Playing item... "
 msgstr ""
 
-msgctxt "Popup message"
+msgctxt "Popup message with addition"
 msgid "Removing item... "
 msgstr ""
 
@@ -197,12 +199,15 @@ msgctxt "Popup message"
 msgid "Failed to remove playlist item... "
 msgstr ""
 
+msgctxt "Initial window screen"
 msgid "Setting up UI..."
 msgstr ""
 
+msgctxt "Initial window screen"
 msgid "Initialize XBMC-lib..."
 msgstr ""
 
+msgctxt "Initial window screen"
 msgid "Failed to load UI!"
 msgstr ""
 
@@ -239,6 +244,14 @@ msgstr ""
 
 msgctxt "Popup message"
 msgid "Finished Video Library Scan"
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Finished Video Library Clean"
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Finished Music Library Clean"
 msgstr ""
 
 msgctxt "Popup message"
@@ -311,129 +324,166 @@ msgstr ""
 msgid "Sets"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Exit XBMC"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Shutdown"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Suspend"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Reboot"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Left"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Right"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Up"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Down"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Back"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Home"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Select"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Info"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Context Menu"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Help"
-msgstr ""
-
-msgid "?"
 msgstr ""
 
 msgid "Save"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Play"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Play/Pause"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Next"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Previous"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Stop"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Volume Up"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Volume Down"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Rewind"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Fast Forward"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Mute On/Off"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Play Next"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Play in party mode"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Enqueue"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Swap"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "All Albums"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Songs"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Remove"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Information"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Unwatched"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Seasons"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Controls"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Subtitles On/Off"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Subtitles Next"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Subtitles Previous"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Next Audio Stream"
 msgstr ""
 
+msgctxt "Tool tip"
 msgid "Previous Audio Stream"
 msgstr ""
 
@@ -449,189 +499,234 @@ msgstr ""
 msgid "Export Library"
 msgstr ""
 
+msgctxt "Settings"
 msgid "UI"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Start page"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Language"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Albums"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Recent Albums"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Expert"
 msgstr ""
 
+msgctxt "Settings"
 msgid "View Options"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Movies"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Recent Movies"
 msgstr ""
 
+msgctxt "Settings"
 msgid "TV Shows"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Recent TV"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Episodes"
 msgstr ""
 
+msgctxt "Settings"
 msgid "General"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Views"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Video Views"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Music Views"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Sorting"
 msgstr ""
 
-msgid "Default UI"
+msgctxt "Footer label"
+msgid "Now:"
 msgstr ""
 
-msgid "Now"
+msgctxt "Footer label"
+msgid "Next:"
 msgstr ""
 
-msgid "Next"
+msgctxt "Footer label"
+msgid "Remaining:"
 msgstr ""
 
-msgid "Remaining"
+msgid "Playlist Total:"
 msgstr ""
 
-msgid "Playlist Total"
+msgid "Total:"
 msgstr ""
 
-msgid "Total"
+msgid "Track:"
 msgstr ""
 
-msgid "Track"
+msgid "Album:"
 msgstr ""
 
-msgid "Album"
+msgid "Duration:"
 msgstr ""
 
-msgid "Duration"
-msgstr ""
-
+msgctxt "Settings"
 msgid "Order By Title"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Order By Artist"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Title"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Sort Title"
 msgstr ""
 
-msgid "Year"
-msgstr ""
-
+msgctxt "Settings"
 msgid "Added"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Rating"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Studio"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Artist"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Album"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Year"
 msgstr ""
 
-msgid "Added"
-msgstr ""
-
+msgctxt "Settings"
 msgid "Logo"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Single Logo"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Poster"
 msgstr ""
 
+msgctxt "Settings"
 msgid "List (Details Overlay)"
 msgstr ""
 
+msgctxt "Settings"
 msgid "List (Details Inline)"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Accordion (Details Inline)*"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Single Poster"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Banner"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Thumbnail (Details Overlay)"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Info List"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Cover"
 msgstr ""
 
+msgctxt "Settings"
 msgid "List"
 msgstr ""
 
+msgctxt "Settings"
 msgid "use LazyLoad for Thumbnails"
 msgstr ""
 
-msgid "Show info tags (Uni UI only)"
+msgctxt "Settings"
+msgid "Show info tags"
 msgstr ""
 
-msgid "Rotate CD art (Uni UI only)"
+msgctxt "Settings"
+msgid "Rotate CD art"
 msgstr ""
 
+msgctxt "Settings"
 msgid "Use Fan Art as background"
 msgstr ""
 
+msgctxt "Settings"
 msgid "TimeOut for Ajax-Requests: "
 msgstr ""
 
+msgctxt "Settings"
 msgid "Number of items to list: "
 msgstr ""
 
+msgctxt "Settings after: Number of items to list"
 msgid "for artist based views."
 msgstr ""
 
+msgctxt "Settings after: Number of items to list"
 msgid "for album based views."
 msgstr ""
 
+msgctxt "Settings after: Number of items to list"
 msgid "for movie based views."
 msgstr ""
 
+msgctxt "Settings after: Number of items to list"
 msgid "for TV based views."
 msgstr ""
 
+msgctxt "Settings"
 msgid "Settings are stored in cookies."
 msgstr "(Settings are stored in cookies. You need to enable cookies for this site.)"
 
+msgctxt "Settings"
 msgid "* Not recommended for a large amount of items."
 msgstr ""
 
