--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.6.1
+  - Extra fan art support for random playing background.
+  
 0.6.0
  - Initial build for Frodo.
  - Websockets - near instant responce to notifications.
